--- a/Version 1/Acercade.html
+++ b/Version 1/Acercade.html
@@ -119,19 +119,23 @@ ul.breadcrumb li a.active:hover {
         <h2>Conocenos</h2>
      <div class="gallery">
         <div class="gallery-individual-container">
-            <pre><img src="assets/images/adm.png" alt="RicardoA" width="50" height="50">   <img src="assets/images/adm.png" alt="Adriana" width="50" height="50">    <img src="assets/images/adm.png" alt="Luis" width="50" height="50">    <img src="assets/images/adm.png" alt="Ricardo" width="50" height="50"></pre>
+            <pre><img src="assets/images/adm.png" alt="RicardoA" width="50" height="50">                    <img src="assets/images/adm.png" alt="Adriana" width="50" height="50">                    <img src="assets/images/adm.png" alt="Luis" width="50" height="50">                    <img src="assets/images/adm.png" alt="Ricardo" width="50" height="50"></pre>
 <div style="display: flex;justify-content: center;">
-            <div><span style="margin-right: 30px;margin-left: 15px;">RAPG</span></div>
-	    <div><span style="margin-right: 40px;">ARG</span></div>
-	    <div><span style="margin-right: 30px;">MCLA</span></div>
-	    <div><span style="margin-right: 20px;">RSAA</span></div>
+            <div><span style="margin-right: 30px;margin-left: 15px;">Pimentel González Ricardo Antonio</span></div>
+	    <div><span style="margin-right: 40px;">Rocha García Adriana</span></div>
+	    <div><span style="margin-right: 30px;">Mendoza Chávez Luis Alberto</span></div>
+	    <div><span style="margin-right: 20px;">San Agustín Alcivar Ricardo</span></div>
 </div>
             <pre></pre>
-<div style="display: flex; justify-content:center;">
-    <div><a href="#" style="margin-right:15px;">Ver mas</a></div>
-    <div><a href="#" style="margin-right:15px;">Ver mas</a></div>
-    <div><a href="#" style="margin-right:15px;">Ver mas</a></div>
-    <div><a href="#" style="margin-right:15px;">Ver mas</a></div>
+<div>
+    <div><p>En CVenlinea nuestra misión es ayudar a todos aquellos que desean destacarse y darse a conocer en el mundo digital a través de la creación de un CV.</p></div>
+    <div><p><strong>¿Quiénes somos?</strong></p></div>
+    <div><p>Somos un equipo apasionado por la tecnología y el desarrollo profesional, comprometidos con proporcionar una plataforma accesible y fácil de usar para crear y gestionar currículums vitae.</p></div>
+    <div><p><strong>¿Qué hacemos?</strong></p></div>
+    <div><p>Ofrecemos una herramienta en línea que permite a los usuarios diseñar, personalizar y compartir su CV de forma sencilla y rápida. CVenlinea te brinda las herramientas necesarias para destacar tus logros y habilidades de la mejor manera posible.</p></div>
+    <div><p><strong>Nuestro propósito</strong></p></div>
+    <div><p>Nuestro objetivo principal es empoderar a nuestros usuarios para que puedan presentarse de manera efectiva en el competitivo mercado laboral.<br>
+En CVenlinea, nos apasiona ver cómo nuestros usuarios alcanzan sus metas profesionales. Únete a nosotros y descubre cómo podemos ayudarte a brillar en el mundo digital.</p></div>
 </div> 
 </div>
 </div>
