--- a/Version 1/Acercade.html
+++ b/Version 1/Acercade.html
@@ -116,7 +116,7 @@ ul.breadcrumb li a.active:hover {
 <body>
 <main>
     <section>
-        <h2>Conocenos</h2>
+        <h2>Conócenos</h2>
      <div class="gallery">
         <div class="gallery-individual-container">
             <pre><img src="assets/images/adm.png" alt="RicardoA" width="50" height="50">                    <img src="assets/images/adm.png" alt="Adriana" width="50" height="50">                    <img src="assets/images/adm.png" alt="Luis" width="50" height="50">                    <img src="assets/images/adm.png" alt="Ricardo" width="50" height="50"></pre>
