--- a/Version 1/Contacto.html
+++ b/Version 1/Contacto.html
@@ -1,5 +1,5 @@
 <!doctype html>
- 
+ <head><meta charset="utf-8"</head>
      <nav>
       <ul>
         <div class="mi-div">
@@ -116,7 +116,8 @@ ul.breadcrumb li a.active:hover {
 <body>
 <main>
     <section>
-        <h2>Contactanos</h2>
+        <h2>Contáctanos</h2>
+     <div><p>En caso de cualquier problema, queja, duda o sugerencia.</p></div>
      <div class="gallery">
         <div class="gallery-individual-container">
             <pre><img src="assets/images/Telefono.png" alt="Telefono" width="50" height="50">                              <img src="assets/images/Correo.png" alt="Correo" width="50" height="50"></pre>
@@ -139,4 +140,5 @@ ul.breadcrumb li a.active:hover {
     </div>
    
 </footer>
+</html>
 </html>
